tests/ui/transparent-display.stderr
error: cannot have both #[error(transparent)] and a display attribute
 --> tests/ui/transparent-display.rs:5:1
  |
3 | #[derive(Error, Debug)]
  |          ----- in this derive macro expansion
4 | #[error(transparent)]
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Error` (in Nightly builds, run with -Z macro-backtrace for more info)
